force-app/main/default/objects/Security_Petition_Timeline__c/Security_Petition_Timeline__c.object-meta.xml
<CustomObject>
    <label>Security Petition Timeline</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Timeline #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Petition Timeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>