force-app/main/default/objects/Security_Petition_Timeline__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Security Petition Timeline</relationshipLabel>
    <relationshipName>Security_Petition_Timeline</relationshipName>
    <type>Lookup</type>
</CustomField>