force-app/main/default/objects/Security_Petition_Timeline__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Security Petition Timeline</relationshipLabel>
    <relationshipName>Security_Petition_Timeline</relationshipName>
    <type>Lookup</type>
</CustomField>