force-app/main/default/objects/Security_Petition_Timeline__c/fields/Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype__c</fullName>
    <label>Event Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>