force-app/main/default/objects/Security_Petition_Timeline__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seizure Date</fullName>
            </value>
            <value>
                <fullName>Arrest Date</fullName>
            </value>
            <value>
                <fullName>Charge Date</fullName>
            </value>
            <value>
                <fullName>Indictment Date</fullName>
            </value>
            <value>
                <fullName>Amended Indictment Date</fullName>
            </value>
            <value>
                <fullName>Surrender Date</fullName>
            </value>
            <value>
                <fullName>Petition Filed Date</fullName>
            </value>
            <value>
                <fullName>Petition Drafted Date</fullName>
            </value>
            <value>
                <fullName>Subsequent Filing Date – Defendant</fullName>
            </value>
            <value>
                <fullName>Subsequent Filing Date – Gov’t</fullName>
            </value>
            <value>
                <fullName>Hearing Date</fullName>
            </value>
            <value>
                <fullName>Inspection Date</fullName>
            </value>
            <value>
                <fullName>Order Date</fullName>
            </value>
            <value>
                <fullName>Date of Forfeiture</fullName>
            </value>
            <value>
                <fullName>Final Disposition Order Date</fullName>
            </value>
            <value>
                <fullName>Released by Prosecutor Date</fullName>
            </value>
            <value>
                <fullName>Return to Owner Date</fullName>
            </value>
            <value>
                <fullName>ASPCA Ownership Date</fullName>
            </value>
            <value>
                <fullName>Notice of Appeal Date</fullName>
            </value>
            <value>
                <fullName>Appeal Filed Date</fullName>
            </value>
            <value>
                <fullName>Appellate Order Date</fullName>
            </value>
            <value>
                <fullName>Stay of Order Date</fullName>
            </value>
            <value>
                <fullName>Stay Lifted Date</fullName>
            </value>
            <value>
                <fullName>Payment Made Date</fullName>
            </value>
            <value>
                <fullName>Affirmation in Opposition - ASPCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>